--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-spring": "^8.0.27",
-    "swiper": "^6.3.3"
+    "sweetalert": "^2.1.2",
+    "swiper": "^6.3.3",
+    "use-local-storage-state": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
